--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "dist/"
   ],
   "scripts": {
-    "build": "stencil build",
     "dev": "sd concurrent \"stencil build --dev --watch\" \"stencil-dev-server\" ",
-    "serve": "stencil-dev-server",
-    "start": "npm run dev",
-    "test": "jest",
-    "test.watch": "jest --watch"
+    "start": "cross-env NODE_ENV=production node build/index.js",
+    "start:watch": "cross-env NODE_ENV=development nodemon build/index.js",
+    "build-client": "cross-env NODE_ENV=production stencil build",
+    "build-client:watch": "cross-env NODE_ENV=development stencil build --dev --watch",
+    "build-server": "cross-env NODE_ENV=production tsc ./src/server/index.ts",
+    "build-server:watch": "cross-env NODE_ENV=development tsc -w -p ./src/server/index.ts"
   },
   "repository": {
     "type": "git",
@@ -31,10 +32,44 @@
     "@stencil/core": "^0.9.2",
     "@stencil/dev-server": "0.0.18",
     "@stencil/utils": "0.0.4",
+    "@types/compression": "0.0.36",
+    "@types/connect-history-api-fallback": "^1.3.1",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/dotenv": "^4.0.3",
+    "@types/express": "^4.11.1",
+    "@types/express-sanitized": "^0.5.2",
+    "@types/history": "^4.6.2",
     "@types/jest": "^22.2.3",
-    "jest": "^22.4.4"
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^10.0.5",
+    "@types/serialize-javascript": "^1.3.2",
+    "css-loader": "^0.28.11",
+    "jest": "^22.4.4",
+    "morgan": "^1.9.0",
+    "style-loader": "^0.21.0"
   },
   "dependencies": {
-    "dotenv": "^5.0.1"
+    "@stencil/router": "^0.1.7",
+    "compression": "^1.7.2",
+    "connect-history-api-fallback": "^1.5.0",
+    "cookie-parser": "^1.4.3",
+    "cross-env": "^5.1.4",
+    "css-modules-require-hook": "^4.2.3",
+    "dotenv": "^5.0.1",
+    "es6-promise": "^4.2.4",
+    "express": "^4.16.3",
+    "express-sanitized": "^0.5.1",
+    "express-session": "^1.15.6",
+    "fastclick": "^1.0.6",
+    "history": "^4.7.2",
+    "node-hook-filename": "^1.0.0",
+    "nodemon": "^1.17.4",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2",
+    "ts-loader": "^3.5.0",
+    "tslint": "^5.10.0",
+    "typescript": "^2.8.3",
+    "underscore": "^1.9.0",
+    "whatwg-fetch": "^2.0.4"
   }
 }
